@@ -6,18 +6,32 @@ plugins {
 description = 'vscode-gradle :: gradle-server'
 
 java {
-  sourceCompatibility = JavaVersion.VERSION_1_8
-  targetCompatibility = JavaVersion.VERSION_1_8
+  sourceCompatibility = JavaVersion.VERSION_17
+  targetCompatibility = JavaVersion.VERSION_17
+}
+
+repositories {
+  mavenCentral()
+  maven {
+    url "https://groovy.jfrog.io/artifactory/plugins-release"
+  }
 }
 
 dependencies {
+  implementation enforcedPlatform('io.netty:netty-bom:4.1.130.Final')
   implementation project(":gradle-plugin-api")
-  implementation "org.gradle:gradle-tooling-api:${toolingAPIVersion}"
+  implementation files('build/libs/server.jar')
+  implementation fileTree(dir: 'build/libs/runtime', include: ['*.jar'], exclude: ['gradle-tooling-api-*.jar',
+  'slf4j-api-*.jar'])
+  implementation("org.gradle:gradle-tooling-api:${toolingAPIVersion}")
   implementation 'javax.annotation:javax.annotation-api:1.3.2'
   implementation "io.grpc:grpc-protobuf:${grpcVersion}"
   implementation "io.grpc:grpc-stub:${grpcVersion}"
+  implementation "io.grpc:grpc-netty:${grpcVersion}"
   implementation 'io.github.g00fy2:versioncompare:1.4.1'
-  runtimeOnly "io.grpc:grpc-netty:${grpcVersion}"
+  implementation project(':gradle-language-server')
+  implementation "org.eclipse.lsp4j:org.eclipse.lsp4j:0.24.0"
+  implementation "org.eclipse.lsp4j:org.eclipse.lsp4j.jsonrpc:0.24.0"
   runtimeOnly 'org.slf4j:slf4j-simple:2.0.0-alpha6'
   testImplementation "io.grpc:grpc-testing:${grpcVersion}"
   testImplementation 'junit:junit:4.13.1'
@@ -107,7 +121,6 @@ spotless {
 task serverStartScripts(type: CreateStartScripts) {
   dependsOn jar
   dependsOn 'copyRuntimeLibs'
-  dependsOn(':gradle-language-server:copyJar')
   outputDir = file(libsDir)
   mainClass = 'com.github.badsyntax.gradle.GradleServer'
   applicationName = project.name
@@ -122,13 +135,32 @@ task serverStartScripts(type: CreateStartScripts) {
 }
 
 task copyRuntimeLibs(type: Copy) {
-  into "../extension/lib"
   from configurations.runtimeClasspath
+  into libsDir
+  duplicatesStrategy = 'exclude'
+  doFirst {
+    delete libsDir
+  }
 }
+
+// copyRuntimeLibs wipes libsDir in its doFirst block. The jar task also outputs
+// gradle-server.jar into libsDir (via libsDirName). Without explicit ordering,
+// Gradle may schedule copyRuntimeLibs after jar, deleting the freshly built
+// gradle-server.jar and producing a runtime ClassNotFoundException.
+jar.mustRunAfter copyRuntimeLibs
 
 project.tasks.named("processResources") {
   dependsOn(':gradle-plugin:copyJar')
   duplicatesStrategy = 'include'
+}
+
+test {
+    jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED',
+    '--add-opens=java.base/java.util=ALL-UNNAMED',
+    '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
+    '--add-opens=java.base/java.nio.file=ALL-UNNAMED',
+    '--add-opens=java.base/java.io=ALL-UNNAMED',
+    '--add-opens=java.base/sun.nio.fs=ALL-UNNAMED'
 }
 
 compileJava.dependsOn 'generateProto', 'spotlessCheck'
